resources/services/service-a/echo-a-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-a
  labels:
    k8s-app: echo-a
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: echo-a
  template:
    metadata:
      labels:
        k8s-app: echo-a
    spec:
      serviceAccountName: echo-a
      terminationGracePeriodSeconds: 2
      containers:
      - name: echo-service
        image: k8s.gcr.io/echoserver:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-a
  labels:
    k8s-app: echo-a
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    k8s-app: echo-a
